--- a/Frontend/gowin/package.json
+++ b/Frontend/gowin/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
+    "framer-motion": "^12.11.4",
+    "motion": "^12.11.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.0",
     "zustand": "^5.0.4"
   },
