--- a/Frontend/gowin/package.json
+++ b/Frontend/gowin/package.json
@@ -12,13 +12,20 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.6",
+    "chart.js": "^4.4.9",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
     "motion": "^12.11.4",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.0",
+    "react-slick": "^0.30.3",
+    "react-swipeable": "^7.0.2",
+    "slick-carousel": "^1.8.1",
+    "swipeable": "^1.0.5",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
