--- a/Frontend/gowin/package.json
+++ b/Frontend/gowin/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "chart.js": "^4.4.9",
     "framer-motion": "^12.12.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "motion": "^12.11.4",
     "prop-types": "^15.8.1",
