--- a/Frontend/gowin/package.json
+++ b/Frontend/gowin/package.json
@@ -27,6 +27,7 @@
     "react-swipeable": "^7.0.2",
     "slick-carousel": "^1.8.1",
     "swipeable": "^1.0.5",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
