--- a/Frontend/gowin/package.json
+++ b/Frontend/gowin/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
     "react-swipeable": "^7.0.2",
+    "rebuild": "^0.1.2",
     "slick-carousel": "^1.8.1",
     "swipeable": "^1.0.5",
     "uuid": "^11.1.0",
