added the necessary itesms

--- a/Frontend/gowin/package.json
+++ b/Frontend/gowin/package.json
@@ -26,6 +26,7 @@
     "react-slick": "^0.30.3",
     "react-swipeable": "^7.0.2",
     "rebuild": "^0.1.2",
+    "recharts": "^2.15.3",
     "slick-carousel": "^1.8.1",
     "swipeable": "^1.0.5",
     "uuid": "^11.1.0",
