--- a/Frontend/gowin/package.json
+++ b/Frontend/gowin/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.0",
+    "react-script": "^2.0.5",
     "react-slick": "^0.30.3",
     "react-swipeable": "^7.0.2",
     "rebuild": "^0.1.2",
